
dist_bin_SCRIPTS = spip_gen.py \
							     spip_lmc.py \
									 spip_lmc_monitor.py \
								   spip_logs.py \
									 spip_proc.py \
									 spip_read.py \
									 spip_recv.py \
									 spip_repack.py \
									 spip_smrb.py \
									 spip_stat.py \
									 spip_tcs.py \
                   kat7_merge.py \
                   kat7_read.py

SUBDIRS = spip

