
webdir = $(prefix)/web/spip

nobase_dist_web_SCRIPTS = index.php \
                          spip.css \
                          colors-white.less\
                          colors.less \
                          spip.lib.php \
													spip_socket.lib.php \
													spip_webpage.lib.php

SUBDIRS = controls images js logs search status timing test stats results
