
webdir = $(prefix)/web/spip/images

nobase_dist_web_SCRIPTS = \
    blankimage.gif \
		green_light.png \
    yellow_light.png \
		red_light.png \
		grey_light.png \
		spip_logo.png \
		spip_background.png \
		spip_favicon.ico \
    jsprogress/percentImage_back1.png \
    jsprogress/percentImage_back1_40.png \
    jsprogress/percentImage_back1_80.png \
    jsprogress/percentImage_back2.png \
    jsprogress/percentImage_back2_40.png \
    jsprogress/percentImage_back2_80.png \
    jsprogress/percentImage_back3.png \
    jsprogress/percentImage_back3_40.png \
    jsprogress/percentImage_back3_80.png \
    jsprogress/percentImage_back4.png \
    jsprogress/percentImage_back4_40.png \
    jsprogress/percentImage_back4_80.png \
    jsprogress/percentImage_back_80.png \
    jsprogress/percentImage_back.png \
    jsprogress/percentImage.png \
    jsprogress/percentImage_40.png \
    jsprogress/verticalPercentImage_back.png \
    jsprogress/verticalPercentImage_back1.png \
    jsprogress/verticalPercentImage_back4.png \
    jsprogress/verticalPercentImage_box.png \
    jsprogress/verticalPercentImage.png \
    jsprogress/icons/add.gif \
    jsprogress/icons/empty.gif \
    jsprogress/icons/fill.gif \
    jsprogress/icons/get.gif \
    jsprogress/icons/minus.gif \
    jsprogress/icons/set.gif
